--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,50 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-    	<title>Easy Apply</title>
-    	<link href="{{url_for('static', filename="css/flat-ui.css")}}" rel="stylesheet">
+        <title>Easy Apply</title>
+        <meta charset="utf-8">
+        <link rel="shortcut icon" href="images/favicon.ico">
+        <link href="{{url_for('static', filename="bootstrap/css/bootstrap.css")}}" rel="stylesheet">
+        <link href="{{url_for('static', filename="css/flat-ui.css")}}" rel="stylesheet">
+        <link href="{{url_for('static', filename="css/easy-apply.css")}}" rel="stylesheet">
+
+        <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
+        <!--[if lt IE 9]>
+        <script src={{url_for('static', filename="js/html5shiv.js")}}></script>
+        <![endif]-->
     </head>
     <body>
-    	<h1>Welcome to use Easy Apply</h1>
+        <div class="navbar navbar-inverse navcontainer">
+            <div>
+                <ul class="nav navbar-left">
+                    <li><a>Easy Apply</a></li>
+                </ul>
+                <ul class="nav navbar-right">
+                    <li><a>Sign Up</a></li>
+                    <li><a>Sign In</a></li>
+                    <li><a>My Account</a>
+                        <ul>
+                            <li><a>SR1</a></li>
+                            <li><a>Sign Out</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="maincontainer">
+            <h1>Welcome to use Easy Apply</h1>
+        </div>
+
+        <!-- Load JS here for greater good =============================-->
+        <script src={{url_for('static', filename="js/jquery-1.8.3.min.js")}}></script>
+        <script src={{url_for('static', filename="js/jquery-ui-1.10.3.custom.min.js")}}></script>
+        <script src={{url_for('static', filename="js/jquery.ui.touch-punch.min.js")}}></script>
+        <script src={{url_for('static', filename="js/bootstrap.min.js")}}></script>
+        <script src={{url_for('static', filename="js/bootstrap-select.js")}}></script>
+        <script src={{url_for('static', filename="js/bootstrap-switch.js")}}></script>
+        <script src={{url_for('static', filename="js/flatui-checkbox.js")}}></script>
+        <script src={{url_for('static', filename="js/flatui-radio.js")}}></script>
+        <script src={{url_for('static', filename="js/jquery.tagsinput.js")}}></script>
+        <script src={{url_for('static', filename="js/jquery.placeholder.js")}}></script>
     </body>
 </html>
