--- a/templates/detail.html
+++ b/templates/detail.html
@@ -33,56 +33,45 @@
             </div>
         </div>
         <div class="maincontainer">
-            <h4>Recent Events</h4>
-            <div>
-                <div class="event-small">
-                    <div class="event-pic-small">
-                        <img class="event-pic-small" src="{{url_for('static', filename="test-images/test.png")}}" />
+            <div class="event-detail-basic">
+                <img class="event-detail-image" src="{{url_for('static', filename="test-images/test.png")}}" />
+                <div class="event-detail-info">
+                    <h4>Communication of December</h4>
+                    <hr />
+                    <div >
+                        <span >Date: 2013-12-08 08:30 pm</span>
                     </div>
-                    <div class="event-title-small">
-                        <span>Communication of December</span>
+                    <div >
+                    <span >Organization: League of Tech</span>
                     </div>
-                </div>
-                <div class="event-small">
-                    <div class="event-pic-small">
-                        <img class="event-pic-small"src="{{url_for('static', filename="test-images/test.png")}}" />
+                    <div >
+                    <span >Quota: 8</span>
                     </div>
-                    <div class="event-title-small">
-                        <span>Communication of December</span>
+                    <div >
+                        <span >Status: 8 Availabe</span>
                     </div>
-                </div>
-                <div class="event-small">
-                    <div class="event-pic-small">
-                        <img class="event-pic-small"src="{{url_for('static', filename="test-images/test.png")}}" />
-                    </div>
-                    <div class="event-title-small">
-                        <span>Communication of December</span>
+                    <div>
+                        <button class="btn btn-info ">Mark for Later</button>
+                        <a class="btn btn-primary ">Join Now!</a>
                     </div>
                 </div>
-                <div class="event-small">
-                    <div class="event-pic-small">
-                        <img class="event-pic-small"src="{{url_for('static', filename="test-images/test.png")}}" />
-                    </div>
-                    <div class="event-title-small">
-                        <span>Communication of December</span>
-                    </div>
-                </div>
-                <div class="event-small">
-                    <div class="event-pic-small">
-                        <img class="event-pic-small"src="{{url_for('static', filename="test-images/test.png")}}" />
-                    </div>
-                    <div class="event-title-small">
-                        <span>Communication of December</span>
-                    </div>
-                </div>
-                <div class="event-small">
-                    <div class="event-pic-small">
-                        <img class="event-pic-small"src="{{url_for('static', filename="test-images/test.png")}}" />
-                    </div>
-                    <div class="event-title-small">
-                        <span>Communication of December</span>
-                    </div>
-                </div>
+            </div>
+            <div class="event-detail-detail-text">
+                <h4>More Information</h4>
+                <hr />
+                <h5>Introduce</h5>
+                <p>
+                    Communication of December is a monthly event hold by League of Tech.
+                </p>
+                <p>
+                    In the event we will share what we learn or what we found intrest last month, in this case, you are welcome if you have something to share with us.
+                </p>
+                <h5>The topic of this event this month is:</h5>
+                <ul>
+                    <li>How to build a Desktop Application using Java - By YanYicheng</li>
+                    <li>Probability theory practise on programing- By YanYinqing</li>
+                    <li>How to design a not bad webpage- By PanJunchi</li>
+                </ul>
             </div>
         </div>
 
