add link to detail on index and update ReadMe

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,14 +35,16 @@
         <div class="maincontainer">
             <h4>Recent Events</h4>
             <div>
-                <div class="event-small">
-                    <div class="event-pic-small">
-                        <img class="event-pic-small" src="{{url_for('static', filename="test-images/test.png")}}" />
+                <a href="/detail">
+                    <div class="event-small">
+                        <div class="event-pic-small">
+                            <img class="event-pic-small" src="{{url_for('static', filename="test-images/test.png")}}" />
+                        </div>
+                        <div class="event-title-small">
+                            <span>Communication of December</span>
+                        </div>
                     </div>
-                    <div class="event-title-small">
-                        <span>Communication of December</span>
-                    </div>
-                </div>
+                </a>
                 <div class="event-small">
                     <div class="event-pic-small">
                         <img class="event-pic-small"src="{{url_for('static', filename="test-images/test.png")}}" />
